--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1 class="heading">
-I am a blue heading!
+I am a pigggggg called Jacob Yang! 
 </h1>
 <svg class="chart">
 	<circle cx="250" cy="250" r="150" style="fill:pink;stroke:black;stroke-width:5;">
@@ -20,11 +20,16 @@ I am a blue heading!
 	</circle>
 	<circle cx="320" cy="200" r="10" style="fill:black;">
 	</circle>
+	<ellipse cx="250" cy="280" rx="60" ry="40" style="fill:pink;stroke:black;stroke-width:5;">
+  	</ellipse>
+  	<ellipse cx="222" cy="280" rx="8" ry="6" style="fill:pink;stroke:black;stroke-width:5;">
+  	</ellipse>
+  	<ellipse cx="268" cy="280" rx="8" ry="6" style="fill:pink;stroke:black;stroke-width:5;">
+  	</ellipse>
+
 </svg>
-<div>
 <img class="image" src="https://raw.githubusercontent.com/IsaKiko/D3-visualising-data/gh-pages/code/cat.jpg">
 </img>
-</div>
 <body>
 </body>
 <div>
